...
    android:layout_height="match_parent"
    android:background="@drawable/fallingcoin"
    tools:context=".ProfileActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonOpenMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="360dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
...
